// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`XDSFormLayout > matches snapshot for horizontal direction 1`] = `
<div
  class="xds-form-layout horizontal XDSFormLayout__styles.base xdt5ytf x18g69wz XDSFormLayout__styles.horizontal xrvj5dj x1mt1orb xu6a5m6"
  data-direction="horizontal"
  data-style-src="@xds/core:src/FormLayout/XDSFormLayout.tsx:41; @xds/core:src/FormLayout/XDSFormLayout.tsx:46"
  data-testid="layout"
>
  <input
    placeholder="First"
  />
  <input
    placeholder="Last"
  />
</div>
`;

exports[`XDSFormLayout > matches snapshot for horizontal-labels direction 1`] = `
<div
  class="xds-form-layout horizontal-labels XDSFormLayout__styles.base xdt5ytf XDSFormLayout__styles.horizontalLabels xrvj5dj x1pmbctz xlaq8a2 x7a106z xedohl4 x1rpgqan x1a1jff"
  data-direction="horizontal-labels"
  data-style-src="@xds/core:src/FormLayout/XDSFormLayout.tsx:41; @xds/core:src/FormLayout/XDSFormLayout.tsx:51"
  data-testid="layout"
>
  <label>
    Name
  </label>
  <input
    placeholder="Name"
  />
</div>
`;

exports[`XDSFormLayout > matches snapshot for vertical direction 1`] = `
<div
  class="xds-form-layout vertical XDSFormLayout__styles.base x78zum5 xdt5ytf x18g69wz"
  data-direction="vertical"
  data-style-src="@xds/core:src/FormLayout/XDSFormLayout.tsx:41"
  data-testid="layout"
>
  <input
    placeholder="Name"
  />
  <input
    placeholder="Email"
  />
</div>
`;
